--- a/wedding/app/views/forum_threads/show.html.erb
+++ b/wedding/app/views/forum_threads/show.html.erb
@@ -12,7 +12,7 @@
   </head>
   <body>
     <%= render "layouts/navbar" , :locals => {:brand => "خدمات"}%>
-        <div class="jumbotron" id = "main-content">
+        <div class="jumbotron" id = "pg-main-content">
 
 <br>
 
