--- a/wedding/app/views/comments/_comment_product.html.erb
+++ b/wedding/app/views/comments/_comment_product.html.erb
@@ -1,54 +1,72 @@
-<div class = "row">   
-    <div class="col-md-7">
-      	<div class="panel panel-danger">
-        	<div class="panel-heading">
-  				<b>نظرات</b>
-        	</div>
-
-        	<ul class="list-group">
-				<% com.each do |comment| %>
-					<li>
-              <div>
-                <br>
-                <div class = "row">
-                  <div class="col-md-11"><%=simple_format("  ")%><%= comment.content %></div>
-                    <div class="col-md-1"><%= link_to image_tag (comment.user.profile.photo) ,{ :width => 100, :height => 80, :class => 'img-responsive' , :alt => 'Responsive image'}%> </div>
-                    </div>
-  		  				<p class="comment_body"><%= comment.user.profile.groomName%>  و  <%= comment.user.profile.brideName%></p>
-                
-    						<h6 class="comment_info">  <%= %><%= time_ago_in_words(comment.created_at) %> ago </h6>
-              </div>
-					</li>
-					<hr>          
-				<% end %>
-        	</ul>
-      	</div>
-    </div>
-
-    <div class=" col-md-5">        
-        <div class="form-group" >
+<div>
+<div class = "row">
+    <div class=" col-md-12">        
+        <div class="form-group" id = "product_description">
            <!-- <textarea class="form-control" rows="3" placeholder= " نظر تازه درباره‌ی این آتلیه">
-        	</textarea>-->
-        	
-        	
-		<%= form_for(:comment, :url => comments_path) do |f| %>
+          </textarea>-->
+          
+          
+    <%= form_for(:comment, :url => comments_path) do |f| %>
 
-			    <%= f.label :"نظر تازه" %><br>
-			    <%= f.text_area :content , :size => '40x5'%>
-				<div class="actions">
-			        <%= f.hidden_field :product_id, :value => prod.id %>
-			        <%= f.submit "نگارش"%><span class="glyphicon glyphicon-pencil"></span></div>
-    			</div>
-    			
-			
-		<% end %>
-	
+          <%= f.label :"نظر تازه" %><br>
+          <%= f.text_area :content , :size => '103x1'%>
+        <div class="actions">
+              <%= f.hidden_field :product_id, :value => prod.id %>
+              <%= f.submit "نگارش"%><span class="glyphicon glyphicon-pencil"></span></div>
+          </div>
+          
+      
+    <% end %>
+  
 
 
-			<p>
-          		
+      <p>
+              
         <!--  <a class="btn btn-primary" role="button" >نگارش<span class="glyphicon glyphicon-pencil"></span> </a>-->
-        	</p>
+          </p>
         </div>  
     </div>
+</div>
+
+
+
+
+<div class = "row">   
+    <div class="col-md-12" id = "product_description">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+          <b>نظرات</b>
+          </div>
+
+          <ul class="list-group">
+        <% com.each do |comment| %>
+          <li id="thread_item">
+<br>
+              <div id = "msg_in_forum">  
+                <div class = "row"><b>
+                  <div class="col-md-10"><%=simple_format("  ")%><%= comment.user.profile.groomName%>  و  <%= comment.user.profile.brideName%>
+                  </div>
+                  </b>
+                  <br>
+                  <div class="col-md-1"><%= link_to image_tag (comment.user.profile.photo) ,{ :width => 100, :height => 80, :class => 'img-responsive' , :alt => 'Responsive image'}%> 
+                  </div>
+                </div>
+                <div class = "row">
+                  <div class="col-md-10">
+                <p class="comment_body">
+                <%= comment.content %>
+                </p>
+                </div></div>
+                <div class = "row">
+                  <div class="col-md-3">
+                <h6 class="comment_info">  <%= %><%= time_ago_in_words(comment.created_at) %>‌پیش 
+                </h6></div></div>
+              </div>
+          </li>
+          <hr>          
+        <% end %>
+          </ul>
+        </div>
+    </div>
+</div>
 </div>
